Fourth week Lab and Assignment Problems